--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -484,7 +484,7 @@ Conversion
 
 Strings
 ^^^^^^^
--
+- Bug in :meth:`Series.str` that did not raise a ``TypeError`` when iterated (:issue:`54173`)
 -
 
 Interval
