PERF: Do not init cache in RangeIndex.take (#53397)
* PERF: Do not init cache in RangeIndex.take

Improve performance when passing an array to RangeIndex.take, DataFrame.loc, or DataFrame.iloc and the DataFrame is using a RangeIndex

* Explicitly raise ValueError in RangeIndex.take when allow_fill is True and fill_value is not None

* Add test_take_when_index_has_negative_step

* Override RangeIndex._find_common_type_compat

* Revert "Override RangeIndex._find_common_type_compat"

This reverts commit 102644c04cc7f7a8efb57955414331663078cd52.

* Change find_result_type to take a dtype instead of values

* Call _maybe_disallow_fill

* Move checks from test_cache_after_calling_loc_with_array to test_cache

--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -412,6 +412,7 @@ Performance improvements
 - Performance improvement in various :class:`MultiIndex` set and indexing operations (:issue:`53955`)
 - Performance improvement when doing various reshaping operations on :class:`arrays.IntegerArrays` & :class:`arrays.FloatingArray` by avoiding doing unnecessary validation (:issue:`53013`)
 - Performance improvement when indexing with pyarrow timestamp and duration dtypes (:issue:`53368`)
+- Performance improvement when passing an array to :meth:`RangeIndex.take`, :meth:`DataFrame.loc`, or :meth:`DataFrame.iloc` and the DataFrame is using a RangeIndex (:issue:`53387`)
 -
 
 .. ---------------------------------------------------------------------------
