BUG: iter(ser.str) did not raise TypeError (#54174)
* BUG: iter(ser.str) did not raise TypeError

* pass through

* Change test

* Typing

--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -492,7 +492,7 @@ Conversion
 
 Strings
 ^^^^^^^
--
+- Bug in :meth:`Series.str` that did not raise a ``TypeError`` when iterated (:issue:`54173`)
 -
 
 Interval
