--- a/doc/source/whatsnew/v2.1.0.rst
+++ b/doc/source/whatsnew/v2.1.0.rst
@@ -133,14 +133,14 @@ to ``na_action=None``, like for all the other array types.
 New implementation of :meth:`DataFrame.stack`
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-pandas has reimplemented :meth:`DataFrame.stack`. To use the new implementation, pass the argument ``v3=True``. This will become the only option in pandas 3.0.
+pandas has reimplemented :meth:`DataFrame.stack`. To use the new implementation, pass the argument ``future_stack=True``. This will become the only option in pandas 3.0.
 
 The previous implementation had two main behavioral downsides.
 
  1. The previous implementation would unnecessarily introduce NA values into the result. The user could have NA values automatically removed by passing ``dropna=True`` (the default), but doing this could also remove NA values from the result that existed in the input. See the examples below.
  2. The previous implementation with ``sort=True`` (the default) would sometimes sort part of the resulting index, and sometimes not. If the input's columns are *not* a :class:`MultiIndex`, then the resulting index would never be sorted. If the columns are a :class:`MultiIndex`, then in most cases the level(s) in the resulting index that come from stacking the column level(s) would be sorted. In rare cases such level(s) would be sorted in a non-standard order, depending on how the columns were created.
 
-The new implementation (``v3=True``) will no longer unnecessarily introduce NA values when stacking multiple levels and will never sort. As such, the arguments ``dropna`` and ``sort`` are not utilized and must remain unspecified when using ``v3=True``. These arguments will be removed in the next major release.
+The new implementation (``future_stack=True``) will no longer unnecessarily introduce NA values when stacking multiple levels and will never sort. As such, the arguments ``dropna`` and ``sort`` are not utilized and must remain unspecified when using ``future_stack=True``. These arguments will be removed in the next major release.
 
 .. ipython:: python
 
@@ -148,13 +148,13 @@ The new implementation (``v3=True``) will no longer unnecessarily introduce NA v
     df = pd.DataFrame([[0, 2], [1, 3]], index=["z", "y"], columns=columns)
     df
 
-In the previous version (``v3=False``), the default of ``dropna=True`` would remove unnecessarily introduced NA values but still coerce the dtype to ``float64`` in the process. In the new version, no NAs are introduced and so there is no coercion of the dtype.
+In the previous version (``future_stack=False``), the default of ``dropna=True`` would remove unnecessarily introduced NA values but still coerce the dtype to ``float64`` in the process. In the new version, no NAs are introduced and so there is no coercion of the dtype.
 
 .. ipython:: python
     :okwarning:
 
-    df.stack([0, 1], v3=False, dropna=True)
-    df.stack([0, 1], v3=True)
+    df.stack([0, 1], future_stack=False, dropna=True)
+    df.stack([0, 1], future_stack=True)
 
 If the input contains NA values, the previous version would drop those as well with ``dropna=True`` or introduce new NA values with ``dropna=False``. The new version persists all values from the input.
 
@@ -163,9 +163,9 @@ If the input contains NA values, the previous version would drop those as well w
 
     df = pd.DataFrame([[0, 2], [np.nan, np.nan]], columns=columns)
     df
-    df.stack([0, 1], v3=False, dropna=True)
-    df.stack([0, 1], v3=False, dropna=False)
-    df.stack([0, 1], v3=True)
+    df.stack([0, 1], future_stack=False, dropna=True)
+    df.stack([0, 1], future_stack=False, dropna=False)
+    df.stack([0, 1], future_stack=True)
 
 .. _whatsnew_210.enhancements.other:
 
